tdf#112845 rtl dropdowns in wrong position

for rtl we mirror the position of popdowns, so we need
to know their initial desired position before they have actually
appeared yet and have a valid maGeometry.nX, so fill in the
hoped-for position as the current position

Change-Id: Ic22dc3e5d9922f5d48bbbdaad53caabff57188d8